data/derived/fa15/progs/unify/prog1830.ml.out
Characters 69-75:
  in if c'= false then wwhile(f b')
                             ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type ('a -> 'a * bool) * 'a
